<resources>
    <string name="app_name">Tipuous</string>
    <string name="string_amount"> Bill Amount</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="string_quick_tip_label">Quick Tip</string>
    <string name="five_percent">5%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="ten_percent">10%</string>
    <string name="other_percent">Custom tip (%)</string>
    <string name="calculate_other">+</string>
    <string name="tip_amount_final">Tip:</string>
    <string name="total_bill_label">Total</string>
    <string name="tip_amount">$25.99</string>
    <string name="grand_bill_total">$89.99</string>
    <string name="label">infamous</string>
    <string name="em_dash">&#8211;</string>

    <string name="toast_input_error">Please enter desired amount.</string>
    <string name="other_percent_input_string">Enter %</string>
    <string name="bill">Bill</string>
    <string name="tip">Tip</string>

    <string name="version">Version: %1$s</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="bill_hint">Enter total</string>
    <string name="slider_description">Slide to the desired tip amount.</string>
    <string name="bill_description">Enter bill amount.</string>
    <string name="currency_icon_description">Currency icon.</string>
    <string name="ten_percent_button_description">Ten percent</string>
    <string name="fifteen_percent_button_description">Fifteen percent</string>
    <string name="twenty_percent_button_description">Twenty percent</string>
    <string name="other_percent_button_description">Custom percent</string>
    <string name="share_button_description">Share</string>
    <string name="tip_amount_description">Tip amount</string>
    <string name="total_amount_including_tip_description">Total amount including tip</string>
    <string name="tipuous_version_number_description">Tipuous version number</string>
    <string name="split">Split</string>
    <string name="each">Each</string>
</resources>
