<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tips.tipuous.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSmokeDark"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bill_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/bill"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Bill" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_bill">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/currency_icon"
                        android:layout_width="@dimen/currency_icon_size"
                        android:layout_height="@dimen/currency_icon_size"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_currency"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/bill_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="32dp"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        app:layout_constraintBottom_toBottomOf="@+id/currency_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/currency_icon"
                        app:layout_constraintTop_toTopOf="@+id/currency_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_layout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/tip"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Tip" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_bg"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_tip">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/five_percent"
                        android:layout_width="wrap_content"
                        android:checked="true"
                        app:checkedIcon="@drawable/ic_round_check"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:chipIconEnabled="true"
                        android:checkable="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/ten_percent"
                        app:chipBackgroundColor="@color/colorSmokeDark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ten_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/fifteen_percent"
                        app:chipBackgroundColor="@color/colorSmokeDark"
                        app:layout_constraintStart_toEndOf="@+id/five_percent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/twenty_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/twenty_percent"
                        app:chipBackgroundColor="@color/colorSmokeDark"
                        app:layout_constraintStart_toEndOf="@+id/ten_percent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/custom_percent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/other_percent"
                        app:chipBackgroundColor="@color/colorSmokeDark"
                        app:layout_constraintStart_toEndOf="@+id/twenty_percent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>






            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/total_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tip_layout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/total_bill_label"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Total" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/total_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_bg"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_total">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>